# altro-cpp

./: .clang-format  .gitignore  CMakeLists.txt  Config.cmake.in  README.md  Readme.md  install.sh  run_tests.sh  setup.sh  uninstall.sh
.github/workflows/: Documentation.yml  build-and-test.yml
altro/: CMakeLists.txt  eigentypes.hpp  main.cpp
altro/augmented_lagrangian/: CMakeLists.txt  al_cost.cpp  al_cost.hpp  al_problem.cpp  al_problem.hpp  al_solver.cpp  al_solver.hpp
altro/common/: CMakeLists.txt  functionbase.cpp  functionbase.hpp  knotpoint.cpp  knotpoint.hpp  log_entry.cpp  log_entry.hpp  profile_entry.cpp  profile_entry.hpp  solver_logger.cpp  solver_logger.hpp  solver_options.cpp  solver_options.hpp  solver_stats.cpp  solver_stats.hpp  state_control_sized.hpp  threadpool.cpp  threadpool.hpp  threadsafe_queue.cpp  threadsafe_queue.hpp  timer.cpp  timer.hpp  trajectory.cpp  trajectory.hpp
altro/constraints/: CMakeLists.txt  constraint.cpp  constraint.hpp  constraint_values.cpp  constraint_values.hpp
altro/ilqr/: CMakeLists.txt  cost_expansion.cpp  cost_expansion.hpp  dynamics_expansion.cpp  dynamics_expansion.hpp  ilqr.cpp  ilqr.hpp  knot_point_function_type.cpp  knot_point_function_type.hpp
altro/problem/: CMakeLists.txt  costfunction.cpp  costfunction.hpp  discretized_model.cpp  discretized_model.hpp  dynamics.cpp  dynamics.hpp  integration.cpp  integration.hpp  problem.cpp  problem.hpp
altro/utils/: CMakeLists.txt  assert.cpp  assert.hpp  benchmarking.hpp  derivative_checker.cpp  derivative_checker.hpp  formatting.cpp  formatting.hpp  utils.hpp
cmake/: Config.cmake.in  Functions.cmake
dev/brian/: CMakeLists.txt  brian.cpp
docs/: Algorithm.dox  CMakeLists.txt  Overview.dox
examples/: CMakeLists.txt  basic_constraints.cpp  basic_constraints.hpp  obstacle_constraints.cpp  obstacle_constraints.hpp  quadratic_cost.cpp  quadratic_cost.hpp  quadraticcost.cpp  quadraticcost.hpp  triple_integrator.cpp  triple_integrator.hpp  unicycle.cpp  unicycle.hpp  unicycle_main.cpp
examples/cartpole/: CMakeLists.txt  cartpole.cpp  cartpole.hpp  cartpole_main.cpp
examples/problems/: CMakeLists.txt  triple_integrator.cpp  triple_integrator.hpp  unicycle.cpp  unicycle.hpp
examples/test/: CMakeLists.txt  quadraticcost_test.cpp  triple_integrator_test.cpp
perf/: CMakeLists.txt  benchmark_expansions.cpp  benchmark_threadpool.cpp  benchmark_triple_integrator.cpp  benchmark_unicycle.cpp  benchmarks.hpp  profile_expansions.out  profile_threadpool.out  profiler_expansions.out  profiler_triple_integrator.out  profiler_triple_integrator_uncon.out  profiler_unicycle.out  task_launcher.hpp
src/: CMakeLists.txt  costfunction.hpp  discretized_model.cpp  discretized_model.hpp  dynamics.cpp  dynamics.hpp  eigentypes.hpp  integration.cpp  integration.hpp  knotpoint.cpp  knotpoint.hpp  main.cpp  problem.cpp  problem.hpp  trajectory.cpp  trajectory.hpp
src/common/: CMakeLists.txt  knotpoint.cpp  trajectory.hpp
src/ilqr/: CMakeLists.txt  cost_expansion.cpp  cost_expansion.hpp  ilqr.cpp  ilqr.hpp
src/problem/: CMakeLists.txt  costfunction.cpp  costfunction.hpp  discretized_model.hpp  dynamics.hpp  integration.cpp  integration.hpp  problem.hpp
src/test/: CMakeLists.txt  costexpansion_test.cpp  knotpoint_test.cpp  trajectory_test.cpp
src/utils/: CMakeLists.txt  assert.cpp  assert.hpp  derivative_checker.cpp  derivative_checker.hpp  utils.hpp
src/utils/test/: CMakeLists.txt  derivative_checker_test.cpp
test/: CMakeLists.txt  costexpansion_test.cpp  test_utils.hpp
test/augmented_lagrangian/: CMakeLists.txt  auglag_test.cpp
test/common/: CMakeLists.txt  functionbase_test.cpp  knotpoint_test.cpp  solver_logging_test.cpp  solver_options_test.cpp  threadpool_test.cpp  timer_test.cpp  trajectory_test.cpp
test/constraints/: CMakeLists.txt  constraints_test.cpp
test/examples/: CMakeLists.txt  example_triple_integrator_test.cpp  example_unicycle_test.cpp
test/ilqr/: CMakeLists.txt  cost_expansion_test.cpp  dynamics_expansion_test.cpp  ilqr_class_test.cpp  ilqr_test.cpp  knot_point_functions_test.cpp  unicycle_ilqr_test.cpp
test/problem/: CMakeLists.txt  costfunction_test.cpp  dynamics_test.cpp  dynamics_test.hpp  problem_test.cpp  quadratic_cost_test.cpp  triple_integrator_test.cpp  unicycle_test.cpp
test/utils/: CMakeLists.txt  benchmarking_test.cpp  derivative_checker_test.cpp
