add_library(common
  knotpoint.cpp
  knotpoint.hpp
  state_control_sized.hpp
  trajectory.cpp
  trajectory.hpp
  solver_options.hpp
  solver_options.cpp
  solver_stats.hpp
  solver_stats.cpp
  log_entry.hpp
  log_entry.cpp
  solver_logger.hpp
  solver_logger.cpp
)
target_link_libraries(common 
  PUBLIC
  Eigen3::Eigen
  fmt::fmt
  PRIVATE 
  utils
)
export_library(common altroTargets "knotpoint.hpp;trajectory.hpp" altro/common)
