add_executable(cost_expansion_test
  cost_expansion_test.cpp
)
target_link_libraries(cost_expansion_test
  gtest_main
  ilqr
  cost_function_examples
)
gtest_discover_tests(cost_expansion_test)

add_executable(dynamics_expansion_test
  dynamics_expansion_test.cpp
)
target_link_libraries(dynamics_expansion_test
  gtest_main
  ilqr
  dynamics_examples
)
gtest_discover_tests(dynamics_expansion_test)

add_executable(knot_point_functions_test
  knot_point_functions_test.cpp
)
target_link_libraries(knot_point_functions_test
  gtest_main
  ilqr
  dynamics_examples
  cost_function_examples
)
gtest_discover_tests(knot_point_functions_test)

add_executable(ilqr_class_test
  ilqr_class_test.cpp
)
target_link_libraries(ilqr_class_test
  gtest_main
  ilqr
  dynamics_examples
  cost_function_examples
)
gtest_discover_tests(ilqr_class_test)

add_executable(ilqr_test
  ilqr_test.cpp
)
target_link_libraries(ilqr_test
  gtest_main
  altro
  ilqr
  dynamics_examples
  cost_function_examples
)
gtest_discover_tests(ilqr_test)
